--- a/preinter-view/package.json
+++ b/preinter-view/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "lodash.debounce": "^4.0.8",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
