--- a/preinter-view/package.json
+++ b/preinter-view/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "lodash.debounce": "^4.0.8",
     "next": "15.2.3",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
